Submit button adds to Ingredient Array and displays on page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             <h1>My Recipe Collector</h1>
         </div>
         <div class="row" id="add-new">
+            <h2>Add new recipe item</h2>
             <form>
                 <input type="text" id="add-new-input" />
                 <input tpye="submit" class="btn btn-primary" id="add-new-submit" value="Submit"/>
             </form>
+        </div>
+        <div class="row">
+            <h2>Ingredients</h2>
         </div>
         <div class="row" id="ingredients">
         </div>
