Successfully adds to page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Add new recipe item</h2>
             <form>
                 <input type="text" id="add-new-input" />
-                <input tpye="submit" class="btn btn-primary" id="add-new-submit" value="Submit"/>
+                <input type="submit" class="btn btn-primary" id="add-new-submit" value="Submit"/>
             </form>
         </div>
         <div class="row">
